--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/lumeweb/hyperswitch-java-client</url>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -200,8 +209,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
-                <configuration>
-                </configuration>
+                <configuration/>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -241,13 +249,4 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>github</id>
-            <url>https://maven.pkg.github.com/lumeweb/hyperswitch-java-client</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
