--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,15 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/lumeweb/hyperswitch-java-client</url>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
