--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <!-- Required for OSGI bundle -->
         <osgi.private>org.killbill.billing.plugin.hyperswitch.*</osgi.private>
         <swagger.version>1.6.11</swagger.version>
+        <project.build.outputTimestamp>2023-01-01T00:00:00Z</project.build.outputTimestamp>
     </properties>
 
     <dependencyManagement>
