--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <check.skip-enforcer>false</check.skip-enforcer>
 
         <!-- Dependency versions -->
-        <jackson.version>2.14.3</jackson.version>
+        <jackson.version>2.17.1</jackson.version>
         <kotlin.version>1.3.71</kotlin.version>
 
         <!-- Required for OSGI bundle -->
@@ -103,6 +103,11 @@
                 <artifactId>jackson-module-jaxb-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>2.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -139,36 +144,6 @@
             <groupId>io.github.juspay.hyperswitch</groupId>
             <artifactId>hyperswitch-java-client</artifactId>
             <version>0.0.2</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.hyperswitch</groupId>
-                    <artifactId>java-client</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>java-client</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-annotations</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.jaxrs</groupId>
-                    <artifactId>jackson-jaxrs-json-provider</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.datatype</groupId>
-                    <artifactId>jackson-datatype-jsr310</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- HTTP client -->
