--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,10 @@
             <groupId>org.jooq</groupId>
             <artifactId>jooq</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- KillBill APIs - provided by the system -->
         <dependency>
             <groupId>org.kill-bill.billing</groupId>
